changing consultory names and email

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Forty Six & 2 Digital Services</title>
+    <title>GhostDev Services</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -78,7 +78,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center">
       <div class="container d-flex align-items-center justify-content-between">
-        <h1 class="logo"><a href="index.html">Forty Six & 2</a></h1>
+        <h1 class="logo"><a href="index.html">GhostDev Services</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -104,7 +104,7 @@
         data-aos="fade-up"
         data-aos-delay="500"
       >
-        <h1>Welcome to Forty Six & 2</h1>
+        <h1>Welcome to GhostDev Services</h1>
         <h2>We are talented freelance web developers</h2>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
       </div>
@@ -123,7 +123,7 @@
               class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content"
               data-aos="fade-right"
             >
-              <h3>Forty Six & 2 Freelance web developers.</h3>
+              <h3>GhostDev Services Freelance web developers.</h3>
               <p class="fst-italic">
                 We are a small startup based on Monterrey, Nuevo León, México.
                 Offering web development services.
@@ -136,7 +136,7 @@
                 <li><i class="bi bi-check-circle"></i> Freelance designs.</li>
               </ul>
               <p>
-                Forty Six & 2 was created to meet high standards for web
+                GhostDev services was created to meet high standards for web
                 development and help your business grown up.
               </p>
             </div>
@@ -311,7 +311,7 @@
             <!-- Principio del widget integrado de Calendly -->
             <div
               class="calendly-inline-widget"
-              data-url="https://calendly.com/fortysixand2services/consultory?hide_gdpr_banner=1"
+              data-url="https://calendly.com/ghostdevservice/30min?hide_gdpr_banner=1"
               style="min-width: 320px; height: 630px"
             ></div>
             <script
@@ -351,7 +351,7 @@
               <div class="info-box mb-4">
                 <i class="bx bx-envelope"></i>
                 <h3>Email Us</h3>
-                <p>fortysixand2services@gmail.com</p>
+                <p>ghostdevservice@gmail.com</p>
               </div>
             </div>
 
@@ -403,12 +403,12 @@
           <div class="row">
             <div class="col-lg-12 col-md-6">
               <div class="footer-info">
-                <h3>Forty Six & 2</h3>
+                <h3>GhostDev services</h3>
                 <p>
                   Monterrey <br />
                   NL, MX<br /><br />
                   <strong>Phone:</strong> +52 812 687 80 80<br />
-                  <strong>Email:</strong> fortysixand2services@gmail.com<br />
+                  <strong>Email:</strong> ghostdevservice@gmail.com<br />
                 </p>
                 <!-- <div class="social-links mt-3">
                   <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -456,12 +456,12 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Forty Six & 2</span></strong
+          &copy; Copyright <strong><span>GhostDev</span></strong
           >. All Rights Reserved
         </div>
         <div class="credits">
           Designed by
-          <p>Forty Six & 2</p>
+          <p>GhostDev</p>
         </div>
       </div>
     </footer>
